# file_renamer

./: README.md  pyproject.toml
src/renamer/: main.py  renamer.py
